// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should affect error message after formatting 1`] = `
"
<<<<<< before
no error

======
ERROR: (ter-arrow-parens) /src/tslint-eslint-rules/ter-arrow-parens/test.ts[1, 8]: Unexpected parentheses around single function argument.

>>>>>> after
"
`;

exports[`should be pretty after formatting 1`] = `
"
<<<<<< before
[].map(x => 1);

======
[].map((x) => 1);

>>>>>> after
"
`;
